frontend/src/components/Map.css
.map-wrapper {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    display: flex;
    flex-direction: column;
}

.map-container {
    flex: 1;
    width: 100%;
    height: 99%;
}
.leaflet-control-zoom {
    margin-bottom: 20px !important;
    margin-left: 20px !important;
}

.popup-menu {
    display: flex;
    flex-direction: row; 
    gap: 10px; 
    justify-content: center; 
    flex-wrap: wrap; 
  }

.popup-button {
    background-color: #4CAF50; 
    color: white; 
    border: none; 
    border-radius: 3px; 
    padding: 10px 53px; 
    cursor: pointer; 
    font-size: 14px; 
    flex: 1; 
}

  .floor-plan-fullscreen {
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background-color: white;
    z-index: 2000;  
    display: flex;
    flex-direction: column;
}

.floor-plan-header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 10px;
    background-color: #f0f0f0;
}

.floor-plan-header select {
    padding: 5px;
    font-size: 16px;
}

.floor-plan-header button {
    background: none;
    border: none;
    font-size: 24px;
    cursor: pointer;
}

.floor-plan-content {
    flex: 1;
    display: flex;
    justify-content: center;
    align-items: center;
    overflow: auto;
    position: relative;
}

.absolute-svg {
    position: absolute;
  }

.floor-plan-content img {
    max-width: 100%;
    max-height: 100%;
    object-fit: contain;
}

.floor-plan-search {
  position: absolute;
  top: 51px;
  right: 10px;
  width: 250px;
  z-index: 1000;
  display: flex;
  flex-direction: column;
  gap: 18px;
}

.amenities-menu {
    position: absolute;
    bottom: 0px;
    left: 0px;
    z-index: 1000;
  }


.submit-floor-plan {
    position: absolute;
    bottom: 0px; 
    left: 0px;  
    padding: 8px 15px;
    background-color: white; 
    color: black;
    border-radius: 2px;
    border: none;
    cursor: pointer;
    font-size: 12px;
    z-index: 2000;
  }

  .submit-floor-plan-btn {
    position: absolute;
    background-color: #4CAF50; 
    bottom: 0px; 
    left: 0px;  
    color: white;
    border-radius: 2px;
    border: none;
    font-size: 12px;
    padding: 8px 15px;
    cursor: pointer;
    z-index: 2000;
    height: 40px; 
    width: 180px;
  }
  
  .popup-form input[type="text"] {
    margin-bottom: 5px;
  }

